run configuration arguments as commentary