@@ -2,6 +2,7 @@ package ru.grand.lesson5.gcdemo;
 
 import ru.grand.lesson5.dumpdemo.MemHeavy;
 
+// Execution arguments: -Xlog:gc*=debug:file=E:\Trash\gc.log -Xmx256m
 public class GcDemo {
     public static void main(String[] args) {
         while(true)
